# stock-volatility-forecasting

./: .agent.md  .gitignore  Dockerfile  README.md  cleanup_report.md  debug_inspect_market.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_db_news_pipeline.py  run_generate_plots.py  run_pipeline.py  run_rebuild_env.py
.github/: copilot-instructions.md
AI/: cleanup_audit.md  duplicate_report_cleanup.md  run_pipeline_log1p_exec.py  run_plot_side_by_side.py
AI/client/: .gitignore
AI/graphify-out/: .graphify_detect.json
ML/: .gitignore  __init__.py  run_complete_analysis.py  run_diagnostics.py  run_rebuild.py  run_target_experiment.py
ML/graphify-out/: .graphify_step_2_detect_files.py
ML/quant_pipeline/: .dockerignore  Dockerfile  __init__.py  api-test.py  endpoint.py  pyproject.toml  requirements.txt  t.py
artifacts/_tmp_side_by_side/: AAPL_forecast.csv  AAPL_forecast_log1p.csv  MSFT_forecast.csv  NVDA_forecast.csv  NVDA_forecast_log1p.csv  TSLA_forecast.csv
artifacts/forecasts/: AAPL_forecast.csv  MSFT_forecast.csv  MSFT_forecast_log1p.backup_log1p.csv  NVDA_forecast.csv  (+2 more)
client/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1780162922099-ffc86ed121873.mjs  vite.config.js.timestamp-1780488257579-cbdc0ae214053.mjs
public/: index.html
quant_pipeline/: .env.example  README.md  pyproject.toml  requirements.txt
server/: .env.example  Dockerfile  ENDPOINTS.md  README.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.jsx  index.css
(+272 files in other folders)
