[project]
name = "stock-volatility-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.0.0",
    "evidently>=0.4.24",
    "great-expectations>=0.18.14",
    "joblib>=1.4.2",
    "mlflow>=2.13.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "psycopg[binary]>=3.1.19",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dateutil>=2.9.0",
    "requests>=2.32.2",
    "scikit-learn>=1.4.2",
    "sqlalchemy>=2.0.30",
    "tenacity>=8.3.0",
    "torch>=2.3.0",
    "transformers>=4.41.1",
    "xgboost>=2.0.3",
    "yfinance>=0.2.40",
]
